--- a/multi-level.qmd
+++ b/multi-level.qmd
@@ -1,7 +1,11 @@
 ---
 title: "Multilevel Data Modelling"
-author: "Edda Brandes"
 ---
+
+```{r}
+renv::install("yaml")
+```
+
 
 *Recommended literature:*
 
